--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
 cmake_minimum_required(VERSION 3.3)
 
-add_library( qch5 STATIC ProjectFile.C )
+set(SRC
+   ProjectFile.C
+   Data.C
+)
+
+add_library( qch5 STATIC ${SRC})
