Added st_tree headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(qch5)
 
 #add_subdirectory(hdf5-1.10.1)
 include_directories(hdf5-1.10.1/c++/src hdf5-1.10.1/src build/hdf5-1.10.1)
+include_directories(st_tree/include)
 
 
 #include_directories(quaternions/include)
