--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 3.1)
 project(qch5)
 
-#add_subdirectory(hdf5-1.10.1)
+add_subdirectory(hdf5-1.10.1)
 include_directories(hdf5-1.10.1/c++/src hdf5-1.10.1/src build/hdf5-1.10.1)
 include_directories(st_tree/include)
 
