Added depth functions to Schema

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.1)
 
 add_executable(mytest mytest.C)
 
-target_link_libraries(mytest qch5 hdf5_cpp-shared )
+target_link_libraries(mytest qch5 hdf5_cpp-static hdf5_hl-static )
